force-app/main/default/objects/Activity/fields/CWS_Accounting_Software__c.field-meta.xml
<CustomField>
    <fullName>CWS_Accounting_Software__c</fullName>
    <description>Demo Task Type Field</description>
    <inlineHelpText>Captures which competitor Accounting Software the prospect currently uses.</inlineHelpText>
    <label>Accounting Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quickbooks on Prem</fullName>
            </value>
            <value>
                <fullName>QBO</fullName>
            </value>
            <value>
                <fullName>Sage Intact</fullName>
            </value>
            <value>
                <fullName>Sage 50</fullName>
            </value>
            <value>
                <fullName>Sage Canada</fullName>
            </value>
            <value>
                <fullName>Sage 300</fullName>
            </value>
            <value>
                <fullName>Dynamics 365</fullName>
            </value>
            <value>
                <fullName>EAutomate</fullName>
            </value>
            <value>
                <fullName>Great Plains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>