force-app/main/default/objects/Activity/fields/CWS_Add_to_Prospect_Tracker__c.field-meta.xml
<CustomField>
    <fullName>CWS_Add_to_Prospect_Tracker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to Prospect Tracker</label>
    <type>Checkbox</type>
</CustomField>