force-app/main/default/objects/Activity/fields/CWS_Agnostic_Channel_Rep__c.field-meta.xml
<CustomField>
    <fullName>CWS_Agnostic_Channel_Rep__c</fullName>
    <description>This field is used to send an email to email address of non Salesforce user</description>
    <inlineHelpText>Captures the email of a non Salesforce user that needs to be notified that this Activity has been created.</inlineHelpText>
    <label>Agnostic Channel Rep</label>
    <type>Email</type>
</CustomField>