force-app/main/default/objects/Activity/fields/CWS_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Appointment_Date__c</fullName>
    <description>Field to capture activity appointment Date</description>
    <inlineHelpText>Captures the date of the Appointment for the Task.</inlineHelpText>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>