force-app/main/default/objects/Activity/fields/CWS_Appointment_Rep__c.field-meta.xml
<CustomField>
    <fullName>CWS_Appointment_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Will Capture User information</description>
    <inlineHelpText>Captures the name of the internal user who will be attending the appointment.</inlineHelpText>
    <label>Appointment Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>