force-app/main/default/objects/Activity/fields/CWS_Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>CWS_Appointment_Time__c</fullName>
    <description>Field to capture Appointment Time</description>
    <inlineHelpText>Captures the time of the Appointment for the Task.</inlineHelpText>
    <label>Appointment Time</label>
    <type>Time</type>
</CustomField>