force-app/main/default/objects/Activity/fields/CWS_Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Appointment_Type__c</fullName>
    <inlineHelpText>Captures the type of Appointment the Task is.</inlineHelpText>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot Handoff</fullName>
            </value>
            <value>
                <fullName>Scheduled Handoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>