force-app/main/default/objects/Activity/fields/CWS_Area_of_interest_for_SE_to_hit_on__c.field-meta.xml
<CustomField>
    <fullName>CWS_Area_of_interest_for_SE_to_hit_on__c</fullName>
    <inlineHelpText>Captures topics the prospect is interested in which the SE should highlight during the Demo.</inlineHelpText>
    <label>Area of interest for SE to hit on</label>
    <type>TextArea</type>
</CustomField>