force-app/main/default/objects/Activity/fields/CWS_Assigned_To_Manager__c.field-meta.xml
<CustomField>
    <fullName>CWS_Assigned_To_Manager__c</fullName>
    <description>Displays the Manager field value of the Assigned To User.</description>
    <formula>Owner:User.Manager.FirstName + &apos; &apos; +  Owner:User.Manager.LastName</formula>
    <inlineHelpText>Displays the Manager field value of the Assigned To User.</inlineHelpText>
    <label>Assigned To Manager</label>
    <type>Text</type>
</CustomField>