force-app/main/default/objects/Activity/fields/CWS_BDR_Attended__c.field-meta.xml
<CustomField>
    <fullName>CWS_BDR_Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field which captures whether or not BDR attended meeting.</inlineHelpText>
    <label>BDR Attended?</label>
    <type>Checkbox</type>
</CustomField>