force-app/main/default/objects/Activity/fields/CWS_breakdown_of_OS__c.field-meta.xml
<CustomField>
    <fullName>CWS_breakdown_of_OS__c</fullName>
    <inlineHelpText>Captures the percentage breakdown of OS.</inlineHelpText>
    <label>% breakdown of OS</label>
    <type>TextArea</type>
</CustomField>