force-app/main/default/objects/Activity/fields/CWS_Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>CWS_Call_Duration__c</fullName>
    <description>To capture call duration in minutes</description>
    <inlineHelpText>Captures duration of call in minutes.</inlineHelpText>
    <label>Call Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>