force-app/main/default/objects/Activity/fields/CWS_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Call_Status__c</fullName>
    <description>Field will be used to capture call status.</description>
    <inlineHelpText>Captures the Call Status of the Task.</inlineHelpText>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Live Call - Appointment Made</fullName>
            </value>
            <value>
                <fullName>Live Call - DNC</fullName>
            </value>
            <value>
                <fullName>Live Call - No Appointment</fullName>
            </value>
            <value>
                <fullName>Live Call - Not Decision Maker</fullName>
            </value>
            <value>
                <fullName>Live Call - Not Interested</fullName>
            </value>
            <value>
                <fullName>Live Call - Register for Event</fullName>
            </value>
            <value>
                <fullName>No Connect</fullName>
            </value>
            <value>
                <fullName>No Connect - Invalid Number</fullName>
            </value>
            <value>
                <fullName>No Connect - Register for Event (Email)</fullName>
            </value>
            <value>
                <fullName>Meeting - Portal Change</fullName>
            </value>
            <value>
                <fullName>Meeting - No Portal Change</fullName>
            </value>
            <value>
                <fullName>Live Call - Follow-up Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>