force-app/main/default/objects/Activity/fields/CWS_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>CWS_Campaign_Code__c</fullName>
    <label>Campaign Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>