force-app/main/default/objects/Activity/fields/CWS_Competitive_Details__c.field-meta.xml
<CustomField>
    <fullName>CWS_Competitive_Details__c</fullName>
    <inlineHelpText>Captures who CW is competiting with for this deal.</inlineHelpText>
    <label>Competitive Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Competitive_Details</valueSetName>
    </valueSet>
</CustomField>