force-app/main/default/objects/Activity/fields/CWS_Compliance_Requirements_Which_Ones__c.field-meta.xml
<CustomField>
    <fullName>CWS_Compliance_Requirements_Which_Ones__c</fullName>
    <inlineHelpText>Captures which compliance requirements from the prospect are necessary and must be considered.</inlineHelpText>
    <label>Compliance Requirements (Which Ones)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PCI</fullName>
            </value>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>DIFARS</fullName>
            </value>
            <value>
                <fullName>ITAR</fullName>
            </value>
            <value>
                <fullName>FINRA</fullName>
            </value>
            <value>
                <fullName>Cyber Essentials</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>