force-app/main/default/objects/Activity/fields/CWS_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CWS_Created_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date/Time</label>
    <type>DateTime</type>
</CustomField>