force-app/main/default/objects/Activity/fields/CWS_CRM_Software__c.field-meta.xml
<CustomField>
    <fullName>CWS_CRM_Software__c</fullName>
    <description>Demo Task Record type</description>
    <inlineHelpText>Captures which competitor CRM Software the prospect currently uses.</inlineHelpText>
    <label>CRM Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Netsuite</fullName>
            </value>
            <value>
                <fullName>Projector</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>ServiceNow</fullName>
            </value>
            <value>
                <fullName>Spiceworks</fullName>
            </value>
            <value>
                <fullName>Syncro</fullName>
            </value>
            <value>
                <fullName>TigerPaw</fullName>
            </value>
            <value>
                <fullName>ZenDesk</fullName>
            </value>
            <value>
                <fullName>Zoho</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>