force-app/main/default/objects/Activity/fields/CWS_Current_Customer_Chat_Feedback_Tool__c.field-meta.xml
<CustomField>
    <fullName>CWS_Current_Customer_Chat_Feedback_Tool__c</fullName>
    <inlineHelpText>Captures which Customer Chat Feedback tool the prospect currently uses.</inlineHelpText>
    <label>Current Customer/Chat Feedback Tool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smileback</fullName>
            </value>
            <value>
                <fullName>Drift</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Monkey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>