force-app/main/default/objects/Activity/fields/CWS_Current_Type_of_Backup_implemented__c.field-meta.xml
<CustomField>
    <fullName>CWS_Current_Type_of_Backup_implemented__c</fullName>
    <inlineHelpText>Captures which Backup software which the prospect has currently implemented.</inlineHelpText>
    <label>Current Type of Backup implemented</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Axient</fullName>
            </value>
            <value>
                <fullName>Barracuda</fullName>
            </value>
            <value>
                <fullName>Carbonite</fullName>
            </value>
            <value>
                <fullName>CharTec</fullName>
            </value>
            <value>
                <fullName>CloudBerry</fullName>
            </value>
            <value>
                <fullName>CommVault</fullName>
            </value>
            <value>
                <fullName>Datto</fullName>
            </value>
            <value>
                <fullName>Dell AppAssure</fullName>
            </value>
            <value>
                <fullName>eFolder</fullName>
            </value>
            <value>
                <fullName>Intronis</fullName>
            </value>
            <value>
                <fullName>Iron Mountain</fullName>
            </value>
            <value>
                <fullName>Mozy</fullName>
            </value>
            <value>
                <fullName>NetApp</fullName>
            </value>
            <value>
                <fullName>Quest Rapid Recovery</fullName>
            </value>
            <value>
                <fullName>Storagecraft</fullName>
            </value>
            <value>
                <fullName>Weeam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>