force-app/main/default/objects/Activity/fields/CWS_Demo__c.field-meta.xml
<CustomField>
    <fullName>CWS_Demo__c</fullName>
    <label>Demo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>System Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>