force-app/main/default/objects/Activity/fields/CWS_Demo_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Demo_Completed_Date__c</fullName>
    <label>Demo Completed Date</label>
    <type>Date</type>
</CustomField>