force-app/main/default/objects/Activity/fields/CWS_Demo_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Demo_Type__c</fullName>
    <description>Used to Contain Demo Type for specific record type.</description>
    <inlineHelpText>Indicates the type of Demo being deployed.</inlineHelpText>
    <label>Demo Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:1 Demo</fullName>
                <default>true</default>
                <label>1:1 Demo</label>
            </value>
            <value>
                <fullName>1:Many Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>