force-app/main/default/objects/Activity/fields/CWS_Desktop_Count__c.field-meta.xml
<CustomField>
    <fullName>CWS_Desktop_Count__c</fullName>
    <inlineHelpText>Captures the prospect&apos;s number of Desktops.</inlineHelpText>
    <label>Desktop Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>