force-app/main/default/objects/Activity/fields/CWS_Direct_Phone__c.field-meta.xml
<CustomField>
    <fullName>CWS_Direct_Phone__c</fullName>
    <label>Direct Phone</label>
    <type>Phone</type>
</CustomField>