force-app/main/default/objects/Activity/fields/CWS_Discovery_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Discovery_Completion_Date__c</fullName>
    <label>Discovery Completion Date</label>
    <type>Date</type>
</CustomField>