force-app/main/default/objects/Activity/fields/CWS_Duration__c.field-meta.xml
<CustomField>
    <fullName>CWS_Duration__c</fullName>
    <formula>DurationInMinutes</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Captures the duration of the Event in minutes.</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>