force-app/main/default/objects/Activity/fields/CWS_Event_Subtype__c.field-meta.xml
<CustomField>
    <fullName>CWS_Event_Subtype__c</fullName>
    <inlineHelpText>Capture more details about the Event.</inlineHelpText>
    <label>Event Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>ITN Meeting</fullName>
            </value>
            <value>
                <fullName>Partner Onsite CW Office</fullName>
            </value>
            <value>
                <fullName>Partner Office Onsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>