force-app/main/default/objects/Activity/fields/CWS_Follow_up_Steps_Needed__c.field-meta.xml
<CustomField>
    <fullName>CWS_Follow_up_Steps_Needed__c</fullName>
    <inlineHelpText>Captures the follow-up steps necessary during and after the Demo period.</inlineHelpText>
    <label>Follow up Steps Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>