force-app/main/default/objects/Activity/fields/CWS_GBs_of_Live_Data_being_Protected__c.field-meta.xml
<CustomField>
    <fullName>CWS_GBs_of_Live_Data_being_Protected__c</fullName>
    <description>Gigabytes of Live Data they need to Backup (Not how much space is consumed in current backup system)</description>
    <inlineHelpText>Captures the Gigabytes of Live Data the prospect needs to Backup (Not how much space is consumed in current backup system)</inlineHelpText>
    <label>GBs of Live Data being Protected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>