force-app/main/default/objects/Activity/fields/CWS_Hook_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Hook_Completed_Date__c</fullName>
    <label>Hook Completed Date</label>
    <type>Date</type>
</CustomField>