force-app/main/default/objects/Activity/fields/CWS_Legacy_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Event_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Captures Legacy Event IDs.</inlineHelpText>
    <label>Legacy Event ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>