force-app/main/default/objects/Activity/fields/CWS_Legacy_Task_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Task_ID__c</fullName>
    <description>Capture Legacy Task Ids</description>
    <externalId>true</externalId>
    <inlineHelpText>Captures Legacy Task Ids.</inlineHelpText>
    <label>Legacy Task ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>