force-app/main/default/objects/Activity/fields/CWS_Marketing_Software__c.field-meta.xml
<CustomField>
    <fullName>CWS_Marketing_Software__c</fullName>
    <inlineHelpText>Captures which competitor Marketing Software the prospect currently uses.</inlineHelpText>
    <label>Marketing Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hubspot</fullName>
            </value>
            <value>
                <fullName>Mailchimp</fullName>
            </value>
            <value>
                <fullName>Constant Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>