force-app/main/default/objects/Activity/fields/CWS_Network_Device_Count__c.field-meta.xml
<CustomField>
    <fullName>CWS_Network_Device_Count__c</fullName>
    <inlineHelpText>Captures the prospect&apos;s number of Network devices for Demo purposes.</inlineHelpText>
    <label>Network Device Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>