force-app/main/default/objects/Activity/fields/CWS_Networking_Complexity__c.field-meta.xml
<CustomField>
    <fullName>CWS_Networking_Complexity__c</fullName>
    <description>Demo Task Fields</description>
    <inlineHelpText>Captures the complexity of the prospect&apos;s Networking for RMM/Security Demo purposes.</inlineHelpText>
    <label>Networking Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Heavy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>