force-app/main/default/objects/Activity/fields/CWS_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>CWS_Number_of_Employees__c</fullName>
    <inlineHelpText>Captures the number of Employees in the prospect&apos;s company.</inlineHelpText>
    <label>Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>