force-app/main/default/objects/Activity/fields/CWS_Number_of_Sales_Reps__c.field-meta.xml
<CustomField>
    <fullName>CWS_Number_of_Sales_Reps__c</fullName>
    <inlineHelpText>Captures the number of Sales Reps in the prospect&apos;s company.</inlineHelpText>
    <label>Number of Sales Reps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>