force-app/main/default/objects/Activity/fields/CWS_Number_of_Security_Engineers__c.field-meta.xml
<CustomField>
    <fullName>CWS_Number_of_Security_Engineers__c</fullName>
    <inlineHelpText>Captures the number of Security Engineers in the prospect&apos;s company.</inlineHelpText>
    <label>Number of Security Engineers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>