force-app/main/default/objects/Activity/fields/CWS_Obstacles_to_Closing__c.field-meta.xml
<CustomField>
    <fullName>CWS_Obstacles_to_Closing__c</fullName>
    <inlineHelpText>Captures any challenges there may be in closing the deal.</inlineHelpText>
    <label>Obstacles to Closing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>