force-app/main/default/objects/Activity/fields/CWS_OML_of_Current_Documentation__c.field-meta.xml
<CustomField>
    <fullName>CWS_OML_of_Current_Documentation__c</fullName>
    <inlineHelpText>Captures the level of OML of Current Documentation for IT Boost Demo purposes.</inlineHelpText>
    <label>OML of Current Documentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Heavy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>