force-app/main/default/objects/Activity/fields/CWS_Other_Key_Integrations__c.field-meta.xml
<CustomField>
    <fullName>CWS_Other_Key_Integrations__c</fullName>
    <inlineHelpText>Captures any other key integrations that need to be considered for Demo purposes.</inlineHelpText>
    <label>Other Key Integrations</label>
    <type>TextArea</type>
</CustomField>