force-app/main/default/objects/Activity/fields/CWS_Other_Products_Covered__c.field-meta.xml
<CustomField>
    <fullName>CWS_Other_Products_Covered__c</fullName>
    <inlineHelpText>Captures any other products that may have also been covered from the Demo.</inlineHelpText>
    <label>Other Products Covered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assist</fullName>
            </value>
            <value>
                <fullName>Automate</fullName>
            </value>
            <value>
                <fullName>BrightGauge</fullName>
            </value>
            <value>
                <fullName>Command</fullName>
            </value>
            <value>
                <fullName>Control</fullName>
            </value>
            <value>
                <fullName>Enable</fullName>
            </value>
            <value>
                <fullName>ITBoost</fullName>
            </value>
            <value>
                <fullName>Manage</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Recover</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>ConnectWise Identify Assessment</fullName>
            </value>
            <value>
                <fullName>ConnectWise Risk Assessment</fullName>
            </value>
            <value>
                <fullName>ConnectWise MDR with Bitdefender</fullName>
            </value>
            <value>
                <fullName>ConnectWise MDR with SentinelOne Complete</fullName>
            </value>
            <value>
                <fullName>ConnectWise SaaS Security</fullName>
            </value>
            <value>
                <fullName>ConnectWise Co-Managed SIEM</fullName>
            </value>
            <value>
                <fullName>ConnectWise Endpoint Policy Management</fullName>
            </value>
            <value>
                <fullName>MSP+ Foundation Pack</fullName>
            </value>
            <value>
                <fullName>3rd Party- Acronis</fullName>
            </value>
            <value>
                <fullName>3rd Party- Veeam</fullName>
            </value>
            <value>
                <fullName>3rd Party- StorageCraft</fullName>
            </value>
            <value>
                <fullName>3rd Party- Backup</fullName>
            </value>
            <value>
                <fullName>3rd Party- Security</fullName>
            </value>
            <value>
                <fullName>Fortify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>