force-app/main/default/objects/Activity/fields/CWS_Pain_Points_for_SE_to_focus_on__c.field-meta.xml
<CustomField>
    <fullName>CWS_Pain_Points_for_SE_to_focus_on__c</fullName>
    <inlineHelpText>Captures key challenges the prospect currently faces that the SE should highlight during the Demo.</inlineHelpText>
    <label>Pain Points for SE to focus on</label>
    <length>255</length>
    <type>Text</type>
</CustomField>