force-app/main/default/objects/Activity/fields/CWS_Parent_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Parent_Activity_ID__c</fullName>
    <description>Set by follow-up flow to maintain the relationship of a follow-up task to the task it was created from.  Should not be shown to the user.  The Parent Activity ID relates to the first task that required a follow-up</description>
    <label>Parent Activity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>