force-app/main/default/objects/Activity/fields/CWS_Password_Storage_Password_Management__c.field-meta.xml
<CustomField>
    <fullName>CWS_Password_Storage_Password_Management__c</fullName>
    <inlineHelpText>Indicates whether password storage or password management is required.</inlineHelpText>
    <label>Password Storage/Password Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Password Storage</fullName>
            </value>
            <value>
                <fullName>Password Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>