force-app/main/default/objects/Activity/fields/CWS_Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_Primary_Email__c</fullName>
    <label>Primary Email</label>
    <type>Email</type>
</CustomField>