force-app/main/default/objects/Activity/fields/CWS_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Family__c</fullName>
    <inlineHelpText>Indicates which Product Family the Product in the Demo belongs to.</inlineHelpText>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backup</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>RMM</fullName>
            </value>
            <value>
                <fullName>PSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>